# Flux-LLM-KB

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.mail-corpus-settings.test.tsx  App.overview-performance.test.tsx  App.retrieval-details.test.tsx  App.review-jobs.test.tsx  App.test.tsx  App.tsx  styles.css
dashboard/src/test/: appHarness.ts
docker/ollama/: Dockerfile
docs/: architecture.md  file-type-coverage.md  integrations.md  progress.md  roadmap.md  safety.md  setup.md
docs/adr/: 0001-postgresql-pgvector.md  0002-public-repo-private-runtime.md  0003-kb-search-rerank-latency-hotpatch.md  0004-kb-search-rerank-quality-latency-benchmark.md
docs/superpowers/plans/: 2026-07-10-j-drive-relocation.md  2026-07-13-flux-windows-hooks.md  2026-07-13-j-drive-runtime-default.md  2026-07-13-local-only-deployment.md  2026-07-17-gpu-runtime-reconciliation-and-vespa-fallback.md  2026-07-22-gpu-eviction-live-repair.md
docs/superpowers/specs/: 2026-07-13-flux-windows-hooks-design.md  2026-07-13-j-drive-runtime-default-design.md  2026-07-13-local-only-deployment-design.md  2026-07-17-gpu-runtime-reconciliation-and-vespa-fallback-design.md  2026-07-21-gpu-scheduler-priority-and-capacity-recovery-design.md
docs/user-guide/: Flux-LLM-KB-Dashboard-User-Manual.docx  dashboard-user-manual.md
plugins/flux-llm-kb/.codex-plugin/: plugin.json
plugins/flux-llm-kb/hooks/: hooks.json
plugins/flux-llm-kb/scripts/: invoke_hook.ps1  pre_compact.ps1  stop.ps1  user_prompt_submit.ps1
scripts/: check-docker.ps1  start-dashboard-dev.ps1  start-postgres.ps1  status-dashboard-dev.ps1  stop-dashboard-dev.ps1
scripts/codex-hooks/: pre_compact.ps1  stop.ps1  user_prompt_submit.ps1
scripts/deploy/: install-flux.ps1  materialize-local-pip-wheelhouse.py  migrate-flux-install-root.ps1  migrate-postgres-to-docker-volume.ps1  start-flux.ps1  status-flux.ps1  stop-flux.ps1  test-ollama-vision.ps1  update-flux.ps1  verify-image-traceability.ps1
scripts/dev/: benchmark_kb_search_rerank_variants.py  complete-feature.ps1  flux-kb.ps1
scripts/docs/: build-dashboard-user-guide.ps1  build_dashboard_user_guide.py  capture-dashboard-user-guide-screens.ps1  capture_dashboard_user_guide_screens.mjs  dashboard_user_guide_fixtures.mjs  render_docx_with_word.py
src/flux_llm_kb/: __init__.py  acceleration.py  asr_server.py  background_jobs.py  callback_dispatcher.py  callbacks.py  cli.py  code_diagnostics.py  code_index.py  codex_integration.py  crawler.py  dashboard_realtime.py  database.py  embeddings.py  error_diagnostics.py  event_repair.py  event_scheduler.py  event_subscriber.py  event_worker.py  extractors.py  glob_policy.py  governance.py  gpu_reconciliation.py  gpu_runtime.py  gpu_scheduler.py  health.py  hook_policy.py  hooks.py  host_agent.py  host_vss.py  indexer_diagnostics.py  indexer_reliability.py  mail_content_store.py  mail_ingestion.py  mail_oauth.py  mail_post_process.py  mcp_server.py  messaging.py  migrations.py  model_activity.py  (+24 more)
src/flux_llm_kb/dashboard_static/: index.html
src/flux_llm_kb/sql/: 0001_initial.sql  0002_indexes.sql  0003_corpus_monitoring.sql  0004_runtime_settings_mail.sql  0005_mail_oauth.sql  0006_outlook_host_dashboard.sql  0007_host_agent_glob_versions.sql  0008_reconciliation_runtime.sql  0009_imap_scheduler_state_machine.sql  0010_graph_lifecycle.sql  0011_mail_post_process.sql  0012_retention_quality.sql  0013_semantic_duplicate_clusters.sql  0014_acceleration_foundation.sql  0015_embedding_vectorization.sql  0016_indexer_reliability_benchmarks.sql  0017_benchmark_harness.sql  0018_operational_benchmark_calibration.sql  0019_code_aware_retrieval.sql  0020_retrieval_benchmark_runs.sql  0021_indexer_reliability_gate.sql  0022_code_retrieval_feedback.sql  (+25 more)
tests/: conftest.py  test_acceleration.py  test_asr_server.py  test_background_jobs.py  test_cli.py  test_code_diagnostics.py  test_code_index.py  test_code_retrieval_benchmark.py  test_codex_integration.py  test_complete_feature_script.py  test_corpus_search.py  test_crawler.py  test_dashboard_deployment.py  test_dashboard_realtime.py  test_dashboard_test_structure.py  test_dashboard_user_manual.py  test_database.py  test_dockerfile_cache.py  test_docs_v26.py  test_docs_v28.py  test_embeddings.py  test_event_messaging.py  test_event_worker.py  test_extractors.py  test_flux_install_root_migration.py  test_glob_policy.py  test_governance.py  test_gpu_reconciliation.py  test_gpu_runtime.py  test_gpu_scheduler.py  test_health_dashboard.py  test_hooks.py  test_host_agent.py  test_host_vss.py  test_indexer_reliability.py  test_mail_cli_rest.py  test_mail_ingestion.py  test_mail_oauth.py  test_mail_post_process.py  test_mail_scheduler.py  (+25 more)
vespa/: services.xml
vespa/schemas/: flux_evidence.sd
(+109 files in other folders)
