[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-llm-kb"
version = "0.1.0"
description = "Local-first knowledge kernel for LLM agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Flux-LLM-KB contributors" }
]
dependencies = [
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "pydantic>=2.8",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
mcp = [
  "mcp>=1.7",
]
mail = [
  "pywin32>=306; platform_system == 'Windows'",
]
corpus = [
  "watchdog>=4.0",
  "pypdf>=4.0",
  "cryptography>=3.1",
  "python-docx>=1.1",
  "python-pptx>=0.6",
  "openpyxl>=3.1",
  "pillow>=10.0",
]
processors = [
  "duckdb>=1.0",
  "pyarrow>=16.0",
  "faster-whisper>=1.0",
]
gpu = [
  "onnxruntime-gpu>=1.20",
]
dev = [
  "pytest>=8.3",
]

[project.scripts]
flux-kb = "flux_llm_kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flux_llm_kb = ["sql/*.sql", "dashboard_static/*.html", "dashboard_static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*"
]
